# guacamole

examples/: CMakeLists.txt
examples/clipping/: main.cpp
examples/virtual_texturing/: CMakeLists.txt  example-virtual_texturing  main.cpp
examples/virtual_texturing/data/materials/: VirtualTexturing.gmd
include/gua/databases/: TextureDatabase.hpp
include/gua/renderer/: GBuffer.hpp  PhysicalTexture2D.hpp  RenderContext.hpp  Texture.hpp  VT.hpp  VTTexture2D.hpp  VirtualTexturingPass.hpp  VirtualTexturingRenderer.hpp  enums.hpp
plugins/guacamole-vt/: CMakeLists.txt
plugins/guacamole-vt/cmake/: find_lamure_virtual_texturing.cmake
plugins/guacamole-vt/include/gua/renderer/: VTTexture2D.hpp  VirtualTexturingRenderer.hpp
plugins/guacamole-vt/src/gua/renderer/: VTTexture2D.cpp  VirtualTexturingPass.cpp  VirtualTexturingRenderer.cpp
resources/shaders/: tri_mesh_shader.frag
resources/shaders/common/: gua_fragment_shader_output.glsl  gua_gbuffer_input.glsl
src/: CMakeLists.txt
src/gua/databases/: TextureDatabase.cpp
src/gua/renderer/: GBuffer.cpp  PhysicalTexture2D.cpp  RenderContext.cpp  Texture.cpp  Uniform.cpp  VTTexture2D.cpp  VirtualTexturingPass.cpp  VirtualTexturingRenderer.cpp  enums.cpp
